tests/baselines/reference/declarationEmitExpressionWithNonlocalPrivateUniqueSymbol.errors.txt
b.ts(2,14): error TS2527: The inferred type of 'A1' references an inaccessible 'unique symbol' type. A type annotation is necessary.


==== a.ts (0 errors) ====
    type AX = { readonly A: unique symbol };
    export const A: AX = 0 as any;
==== b.ts (1 errors) ====
    import { A } from './a';
    export const A1 = A;
                 ~~
!!! error TS2527: The inferred type of 'A1' references an inaccessible 'unique symbol' type. A type annotation is necessary.